--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,18 +1,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Antic+Slab&display=swap');
 
 :root {
-    --background-primary: #242933;
-    --background-secondary: #2e3440;
-    --background-tertiary: #3b4252;
-    --foreground-primary: #eceff4;
-    --foreground-secondary: #e5e9f0;
-    --accent-primary: #5e81ac;
-    --accent-primary-opacity: #5e81ac80;
-    --accent-secondary: #81a1c1;
+    --background-primary: #ffffff;
+    --background-secondary: #dedede;
+    --foreground-primary: #000000;
+    --foreground-secondary: #151515;
+    --accent-primary: #ff9af0;
 }
 
 ::selection {
-    background-color: var(--accent-primary);
+    background-color: #ffe0fb;
     color: var(--foreground-primary);
 }
 
@@ -29,26 +27,8 @@ body,
     overflow-x: hidden;
     min-width: 100vw;
     min-height: 100vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
     background-color: var(--background-primary);
     color: var(--foreground-primary);
     font-size: 16px;
     font-family: 'Roboto', sans-serif;
-}
-
-svg {
-    width: 24px;
-    height: 24px;
-    stroke-width: 1.5;
-    stroke: var(--foreground-primary);
-    fill: none;
-    stroke-linecap: round;
-    stroke-linejoin: round;
-}
-
-*:focus {
-    outline: 3px solid var(--accent-primary);
-    outline-offset: 2px;
 }
