--- a/src/components/Content/ContentSections/Hero/Hero.module.css
+++ b/src/components/Content/ContentSections/Hero/Hero.module.css
@@ -1,9 +1,3 @@
-.container {
-    width: 100%;
-    padding: 8rem 3rem 0 3rem;
-    display: flex;
-}
-
 .hero {
     width: 50%;
     display: flex;
@@ -41,16 +35,15 @@
 
 .hero__buttons button:first-child {
     width: 60%;
-    padding: 12px 0;
+    padding: 16px 0;
     background-color: var(--accent-primary);
     color: var(--foreground-primary);
     border: none;
     border-radius: 5px;
     font-size: 1rem;
-    font-weight: 700;
+    font-weight: 500;
     margin-right: 1rem;
     cursor: pointer;
-    box-shadow: 0 0 3px rgba(0, 0, 0, 0.2);
 }
 
 .hero__buttons button:last-child {
@@ -62,4 +55,22 @@
     font-weight: 500;
     cursor: pointer;
     text-decoration: underline;
+}
+
+.underline {
+    position: absolute;
+    bottom: -1px;
+    left: 0;
+    right: 0;
+    height: 1px;
+    background: blue;
+}
+
+.li {
+    position: relative;
+    display: inline-block;
+    margin: 0 1rem;
+    font-size: 1.2rem;
+    font-weight: 500;
+    cursor: pointer;
 }
