--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,8 +1,11 @@
 .wrapper {
     width: 100%;
     height: 80px;
+    background: var(--background-primary);
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
     padding: 0 1rem;
+    margin-bottom: 5rem;
+    position: fixed;
 }
 
 .header {
@@ -20,34 +23,30 @@
     letter-spacing: 0.1rem;
     color: var(--text-primary);
     font-family: 'Antic Slab', serif;
-}
-
-.title a {
-    text-decoration: none;
-    color: inherit;
+    cursor: default;
     user-select: none;
 }
 
-.title .a {
+.title > span {
+    font-weight: 500;
     color: var(--accent-primary);
 }
 
-.ul {
+.navList {
     display: flex;
     justify-content: center;
     align-items: center;
     list-style: none;
 }
 
-.link,
-.active {
+.navLink {
     position: relative;
     text-decoration: none;
     font-size: 0.9rem;
     padding: 0.5rem 1rem;
     border-radius: 5px;
     color: #505050;
-    z-index: 1;
+    z-index: 10;
     transition: all 0.15s ease-out;
     text-transform: uppercase;
     font-weight: 500;
@@ -55,18 +54,13 @@
     user-select: none;
 }
 
-.active {
-    color: #000000;
-}
-
-.background {
+.navLinkBackground {
     position: absolute;
-    top: 0;
+    bottom: 0;
     left: 0;
-    width: 100%;
     height: 100%;
-    background-color: var(--background-secondary);
+    width: 100%;
     border-radius: 5px;
-    transition: all 0.3s ease;
+    background: var(--background-tertiary);
     z-index: -1;
 }
