--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,16 +1,19 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;200;300;400;500;600;700;800;900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Antic+Slab&display=swap');
 
 :root {
-    --background-primary: #ffffff;
-    --background-secondary: #dedede;
-    --foreground-primary: #000000;
-    --foreground-secondary: #151515;
-    --accent-primary: #ff9af0;
+    --background-primary: #101010;
+    --background-secondary: #151515;
+    --background-tertiary: #202020;
+    --foreground-primary: #ffffff;
+    --foreground-secondary: #cccccc;
+    --foreground-tertiary: #757575;
+    --accent-primary: #5e81ac;
+    --accent-secondary: #ebcb8b;
 }
 
 ::selection {
-    background-color: #ffe0fb;
+    background-color: var(--accent-primary);
     color: var(--foreground-primary);
 }
 
@@ -31,4 +34,8 @@ body,
     color: var(--foreground-primary);
     font-size: 16px;
     font-family: 'Roboto', sans-serif;
+}
+
+button {
+    user-select: none;
 }
