--- a/src/components/Content/ContentSections/Hero/Hero.module.css
+++ b/src/components/Content/ContentSections/Hero/Hero.module.css
@@ -5,7 +5,7 @@
 }
 
 .hero__content {
-    width: 70%;
+    width: 75%;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -42,19 +42,17 @@
     border-radius: 5px;
     font-size: 1rem;
     font-weight: 500;
-    margin-right: 1rem;
+    margin-right: 3rem;
     cursor: pointer;
 }
 
 .hero__buttons button:last-child {
-    width: 40%;
-    background-color: var(--accent-secondary);
+    background-color: transparent;
     color: var(--accent-primary);
     border: none;
     font-size: 0.9rem;
     font-weight: 500;
     cursor: pointer;
-    text-decoration: underline;
 }
 
 .underline {
