--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -2,14 +2,22 @@
     width: 100%;
     height: 250px;
     padding: 0 1rem;
-    margin-top: 8rem;
+    margin-top: 16rem;
 }
 
 .footer {
+    position: relative;
     width: clamp(320px, 100%, 1200px);
     height: 100%;
     margin: 0 auto;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
+    border-top: 1px solid rgba(255, 255, 255, 0.2);
+}
+
+.footer p {
+    font-size: 0.8rem;
+    font-weight: 400;
+    color: var(--foreground-secondary);
 }
