--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,7 +1,6 @@
 .wrapper {
     width: 100%;
     height: 80px;
-    background: var(--background-primary);
     padding: 0 1rem;
     position: fixed;
 }
@@ -17,17 +16,16 @@
 
 .title {
     font-size: 2.5rem;
-    font-weight: 300;
+    font-weight: 500;
     letter-spacing: 0.1rem;
     color: var(--text-primary);
-    font-family: 'Antic Slab', serif;
+    font-family: 'Inter', sans-serif;
     cursor: default;
     user-select: none;
 }
 
-.title > span {
-    font-weight: 500;
-    color: var(--accent-primary);
+.title span {
+    display: inline-block;
 }
 
 .navList {
