--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,5 +1,14 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;200;300;400;500;600;700;800;900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Antic+Slab&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Antic+Slab&family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Roboto:wght@100;300;400;500;700;900&display=swap');
+
+@font-face {
+    font-family: 'Recoleta';
+    src: local('Recoleta SemiBold'), local('Recoleta-SemiBold'),
+        url('../assets/fonts/recoleta/Recoleta-SemiBold.woff2') format('woff2'),
+        url('../assets/fonts/recoleta/Recoleta-SemiBold.woff') format('woff'),
+        url('../assets/fonts/recoleta/Recoleta-SemiBold.ttf') format('truetype');
+    font-weight: 600;
+    font-style: normal;
+}
 
 :root {
     --background-primary: #151515;
@@ -33,9 +42,67 @@ body,
     background-color: var(--background-primary);
     color: var(--foreground-primary);
     font-size: 16px;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Inter', sans-serif;
 }
 
 button {
     user-select: none;
+}
+
+h1,
+h2,
+h3,
+h4 {
+    font-family: 'Recoleta', sans-serif;
+    color: var(--foreground-primary);
+    line-height: 120%;
+    letter-spacing: 0;
+}
+
+h1 {
+    font-size: 4.5rem;
+}
+
+h2 {
+    font-size: 2.75rem;
+}
+
+p {
+    font-size: 1.2rem;
+    line-height: 150%;
+    color: var(--foreground-secondary);
+    font-family: 'Inter', sans-serif;
+}
+
+button {
+    padding: 0.9rem 1.7rem;
+    text-transform: uppercase;
+    letter-spacing: 0.1rem;
+    font-size: 0.8rem;
+    color: var(--foreground-primary);
+    background-color: transparent;
+    border: 1px solid var(--foreground-primary);
+    margin-right: 3rem;
+    font-weight: 500;
+    cursor: pointer;
+    transition: all 0.2s ease-in-out;
+}
+
+button:hover {
+    background-color: var(--foreground-primary);
+    color: var(--background-primary);
+}
+
+.buttonSecondary {
+    padding: 0;
+    margin: 0;
+    background-color: transparent;
+    border: none;
+    text-decoration: underline;
+    text-underline-offset: 2px;
+}
+
+.buttonSecondary:hover {
+    background-color: transparent;
+    color: var(--accent-primary);
 }
