Adds menuToggle when scrolling

--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -22,6 +22,8 @@
     font-family: 'Inter', sans-serif;
     cursor: default;
     user-select: none;
+    padding: 0.5rem;
+    cursor: pointer;
 }
 
 .title span {
@@ -56,4 +58,19 @@
     border-radius: 5px;
     background: var(--background-tertiary);
     z-index: -1;
+}
+
+.menuToggle > div {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 0.3rem;
+    cursor: pointer;
+}
+
+.menuToggle > div > div {
+    width: 1.5rem;
+    height: 0.1rem;
+    background: var(--foreground-primary);
 }
