--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -26,6 +26,23 @@
     color: var(--foreground-primary);
 }
 
+::-webkit-scrollbar {
+    width: 5px;
+}
+
+::-webkit-scrollbar-track {
+    background: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+    background: var(--accent-primary);
+    border-radius: 100vw;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background: var(--accent-secondary);
+}
+
 * {
     margin: 0;
     padding: 0;
@@ -74,35 +91,12 @@ p {
     font-family: 'Inter', sans-serif;
 }
 
-button {
-    padding: 0.9rem 1.7rem;
-    text-transform: uppercase;
-    letter-spacing: 0.1rem;
-    font-size: 0.8rem;
-    color: var(--foreground-primary);
-    background-color: transparent;
-    border: 1px solid var(--foreground-primary);
-    margin-right: 3rem;
-    font-weight: 500;
-    cursor: pointer;
-    transition: all 0.2s ease-in-out;
-}
-
-button:hover {
-    background-color: var(--foreground-primary);
-    color: var(--background-primary);
-}
-
-.buttonSecondary {
-    padding: 0;
-    margin: 0;
-    background-color: transparent;
-    border: none;
-    text-decoration: underline;
-    text-underline-offset: 2px;
-}
-
-.buttonSecondary:hover {
-    background-color: transparent;
-    color: var(--accent-primary);
+svg {
+    fill: none;
+    stroke: var(--foreground-primary);
+    stroke-width: 1px;
+    stroke-linecap: round;
+    stroke-linejoin: round;
+    width: 24px;
+    height: 24px;
 }
