--- a/src/components/Content/ContentSections/Hero/Hero.module.css
+++ b/src/components/Content/ContentSections/Hero/Hero.module.css
@@ -24,3 +24,37 @@
     justify-content: flex-start;
     align-items: center;
 }
+
+.buttonPrimary,
+.buttonSecondary {
+    padding: 0.9rem 1.7rem;
+    text-transform: uppercase;
+    letter-spacing: 0.1rem;
+    font-size: 0.8rem;
+    color: var(--foreground-primary);
+    background-color: transparent;
+    border: 1px solid var(--foreground-primary);
+    margin-right: 3rem;
+    font-weight: 500;
+    cursor: pointer;
+    transition: all 0.2s ease-in-out;
+}
+
+.buttonPrimary:hover {
+    background-color: var(--foreground-primary);
+    color: var(--background-primary);
+}
+
+.buttonSecondary {
+    padding: 0;
+    margin: 0;
+    background-color: transparent;
+    border: none;
+    text-decoration: underline;
+    text-underline-offset: 2px;
+}
+
+.buttonSecondary:hover {
+    background-color: transparent;
+    color: var(--accent-primary);
+}
